--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,9 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    maven { url 'https://jitpack.io' }
+
+
 }
 
 dependencies {
@@ -23,9 +26,25 @@ dependencies {
     compile group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
     compile group: 'org.hibernate', name: 'hibernate-validator', version: '6.0.17.Final'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.5.3'
-    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.2.0'
-    testCompile group: 'org.junit.platform', name: 'junit-platform-commons', version: '1.2.0'
-    testCompile group: 'org.junit.platform', name: 'junit-platform-launcher', version: '1.2.0'
+
+// https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine
+    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.5.2'
+// https://mvnrepository.com/artifact/org.junit.platform/junit-platform-commons
+    compile group: 'org.junit.platform', name: 'junit-platform-commons', version: '1.5.1'
+    // https://mvnrepository.com/artifact/org.junit.platform/junit-platform-launcher
+    testCompile group: 'org.junit.platform', name: 'junit-platform-launcher', version: '1.5.1'
+
+
+//// https://mvnrepository.com/artifact/org.springframework/spring-test
+//    testCompile group: 'org.springframework', name: 'spring-test', version: '5.1.5.RELEASE'
+//// https://mvnrepository.com/artifact/com.github.sbrannen/spring-test-junit5
+//    testCompile group: 'com.github.sbrannen', name: 'spring-test-junit5', version: '1.0.0.M6'
+    testCompile group: 'org.springframework', name: 'spring-test', version: '4.3.24.RELEASE'
+    testCompile group: 'com.github.sbrannen', name: 'spring-test-junit5', version: '1.2.0'
+
+    testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
+
+    testCompile group: 'com.h2database', name: 'h2', version: '1.4.197'
 }
 
 test {
